k8s/provider2/base/gateway.yaml
#
# Copyright (c) 2026 Metaform Systems, Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#
# Contributors:
#      Metaform Systems, Inc. - initial API and implementation
#

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: provider-gateway
  namespace: provider2
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All  #or Same or Selector
#        kinds:
#          - kind: HTTPRoute
#            group: gateway.networking.k8s.io
